--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         </div>
                         <div class="item-content" style="color: rgb(255, 255, 255);">
                             <h5 class="item-title mbr-fonts-style display-5"><strong>Gustavo Tello</strong></h5>
-                            <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Coordinador General</h6>
+                            <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Coordinador General y Coordinador de Electrónica</h6>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2"></div>
                     </div>
