--- a/equipo.html
+++ b/equipo.html
@@ -180,7 +180,7 @@
                             <div class="user_text mb-4">
                                 <p class="mbr-fonts-style display-7">
                                     <em><strong style="color: #F49791;">Descripción:</strong></em> Soy una persona a la que le gusta investigar sobre nuevos temas y profundizar en aquellos que me parecen interesantes, esta carrera tiene mucho para investigar y mejorar la salud de hoy en día, gracias a hallazgos y mejoras tecnológicas, es la razón por la que me incline hacia esta carrera. Quisiera ayudar a mejorar la salud en el Perú y el mundo y, estoy seguro que esta carrera me brindará lo que necesito para hacerlo.<br><br>
-                                    <strong style="color: #F49791;"><em>Rol: Coordinador General<br></em></strong>Encargado de administrar y distribuir los deberes de cada miembro del equipo, coordinar las reuniones de trabajo, verificar que todos los integrantes cumplan con las obligaciones que requiere su rol y asegurarse que se cumplan todos los objetivos y metas.<br></p>
+                                    <strong style="color: #F49791;"><em>Rol: Coordinador General y Coordinador de Electrónica<br></em></strong>Como coordinador general, esta encargado de administrar y distribuir los deberes de cada miembro del equipo, coordinar las reuniones de trabajo, verificar que todos los integrantes cumplan con las obligaciones que requiere su rol y asegurarse que se cumplan todos los objetivos y metas. Como coordinador de electrónica, esta encargado del inventario de los componentes electrónicos que se vayan a utilizar y del correcto funcionamiento de estos.<br></p>
                             </div>
                             <div class="user_name mbr-fonts-style mb-2 display-7">
                                 <strong>GUSTAVO BRUNO TELLO PALOMINO</strong><br><strong>gustavo.tello@upch.pe&nbsp;&nbsp;<br></strong><br></div>
@@ -195,7 +195,7 @@
                             <div class="user_text mb-4">
                                 <p class="mbr-fonts-style display-7">
                                     <em><strong style="color: #F49791;">Descripción:</strong></em> Como estudiante de Ingeniería Biomédica mis metas actuales son profundizar en el campo de la Ingeniería de Tejidos y Biomateriales y en el de Biomécanica y Rehabilitación. En este proyecto mi meta es aumentar mi experiencia, además de darle un uso practico a mis conocimientos de programación.<br><br>
-                                    <strong style="color: #F49791;"><em>Rol: Coordinador de Programación<br></em></strong>Encargado de la programación del dispositivo, mediante Arduino, Python, así como del inventario de los componentes electrónicos y correcto funcionamiento de estos.<br></p>
+                                    <strong style="color: #F49791;"><em>Rol: Coordinador de Programación<br></em></strong>Encargado de la programación del dispositivo, mediante Arduino y/o Python. Debe verificar que la programación funcione correctamente.<br></p>
                             </div>
                             <div class="user_name mbr-fonts-style mb-2 display-7">
                                 <strong>JAIME JOSÉ ARISTA CUTIPA</strong><br><strong>jaime.arista@upch.pe&nbsp;&nbsp;<br></strong><br></div>
