--- a/actas.html
+++ b/actas.html
@@ -83,15 +83,16 @@
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 12</a>
                                     </div>
                                 </div>
+                                <a class="text-black dropdown-item text-primary display-4" href="actas.html" aria-expanded="false">ACTAS</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 1</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 2</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 3</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="true">PÓSTER</a>
                             </div>
                         </li>
-                        <!-- ACTAS  -->
+                        <!-- CÓDIGO  -->
                         <li class="nav-item">
-                            <a class="text-black dropdown-item text-primary display-4" href="actas.html" aria-expanded="false">ACTAS</a>
+                            <a class="text-black dropdown-item text-primary display-4" href="https://github.com/fundbiogrupo13/happy_baby.git" aria-expanded="false">CÓDIGO</a>
                         </li>
                     </ul>
                 </div>
