--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     </div>
                                 </div>
                                 <a class="text-black dropdown-item text-primary display-4" href="actas.html" aria-expanded="false">ACTAS</a>
-                                <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 1</a>
+                                <a class="text-black dropdown-item text-primary display-4" href="entregable_2.html" aria-expanded="false">HITO 1</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 2</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 3</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="true">PÓSTER</a>
