--- a/actas.html
+++ b/actas.html
@@ -70,7 +70,7 @@
                                     <a class="text-black dropdown-item text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">ENTREGABLES</a>
                                     <div class="dropdown-menu dropdown-submenu">
                                         <a class="text-black dropdown-item text-primary display-4" href="equipo.html" aria-expanded="false">ENTREGABLE 1</a>
-                                        <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 2</a>
+                                        <a class="text-black dropdown-item text-primary display-4" href="entregable_2.html" aria-expanded="false">ENTREGABLE 2</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 3</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 4</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 5</a>
