--- a/esquemas.html
+++ b/esquemas.html
@@ -70,7 +70,7 @@
                                     <a class="text-black dropdown-item text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">ENTREGABLES</a>
                                     <div class="dropdown-menu dropdown-submenu">
                                         <a class="text-black dropdown-item text-primary display-4" href="equipo.html" aria-expanded="false">ENTREGABLE 1</a>
-                                        <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 2</a>
+                                        <a class="text-black dropdown-item text-primary display-4" href="entregable_2.html" aria-expanded="false">ENTREGABLE 2</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 3</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 4</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 5</a>
@@ -83,15 +83,16 @@
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 12</a>
                                     </div>
                                 </div>
+                                <a class="text-black dropdown-item text-primary display-4" href="actas.html" aria-expanded="false">ACTAS</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 1</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 2</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">HITO 3</a>
                                 <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="true">PÓSTER</a>
                             </div>
                         </li>
-                        <!-- ACTAS  -->
+                        <!-- CÓDIGO  -->
                         <li class="nav-item">
-                            <a class="text-black dropdown-item text-primary display-4" href="actas.html" aria-expanded="false">ACTAS</a>
+                            <a class="text-black dropdown-item text-primary display-4" href="https://github.com/fundbiogrupo13/happy_baby.git" aria-expanded="false">CÓDIGO</a>
                         </li>
                     </ul>
                 </div>
