--- a/esquemas.html
+++ b/esquemas.html
@@ -100,7 +100,7 @@
         </nav>
     </section>
 
-    <!-- CONTEXTO SOCIAL Y ECONÓMICO  -->
+    <!-- ESQUEMAS Y DEFINICIÓN DEL PROBLEMA  -->
     <section class="social1 cid-saDh8bZ8rW" id="share1-4g">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);">
         </div>
@@ -108,7 +108,7 @@
             <div class="media-container-row">
                 <div class="col-12">
                     <h3 class="mbr-section-title mb-3 align-center mbr-fonts-style display-1">
-                        <strong><em>CONTEXTO SOCIAL Y ECONÓMICO</em></strong>
+                        <strong><em>ESQUEMAS Y DEFINICIÓN DEL PROBLEMA</em></strong>
                     </h3>
                     <div>
                         <div class="mbr-social-likes align-center"> 
