--- a/esquemas.html
+++ b/esquemas.html
@@ -132,14 +132,14 @@
         </div>
     </section>
 
-        <!-- EMPHATY MAP -->
+        <!-- EMPATHY MAP -->
         <section class="header9 cid-sb0IuvTKPl" id="header9-67">
             <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
             <div class="text-center container">
                 <div class="row justify-content-center">
                     <div class="col-md-12 col-lg-9">
                         <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;"><em>EMPHATY MAP</em></strong><strong><br></strong></h1>
-                        <img src="assets/images/EMPHATY MAP.PNG">
+                        <img src="assets/images/EMPATHY MAP.PNG">
                     </div>
                 </div>
             </div>
