--- a/actas.html
+++ b/actas.html
@@ -56,7 +56,7 @@
                         </li>
                         <!-- EQUIPO  -->
                         <li class="nav-item">
-                            <a class="text-black dropdown-item text-primary display-4" href="equipo.html" aria-expanded="false">EQUIPO</a>
+                            <a class="text-black dropdown-item text-primary display-4" href="entregable_1.html" aria-expanded="false">EQUIPO</a>
                         </li>
                         <!-- CASO CLÍNICO  -->
                         <li class="nav-item">
@@ -69,9 +69,9 @@
                                 <div class="dropdown">
                                     <a class="text-black dropdown-item text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">ENTREGABLES</a>
                                     <div class="dropdown-menu dropdown-submenu">
-                                        <a class="text-black dropdown-item text-primary display-4" href="equipo.html" aria-expanded="false">ENTREGABLE 1</a>
+                                        <a class="text-black dropdown-item text-primary display-4" href="entregable_1.html" aria-expanded="false">ENTREGABLE 1</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="entregable_2.html" aria-expanded="false">ENTREGABLE 2</a>
-                                        <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 3</a>
+                                        <a class="text-black dropdown-item text-primary display-4" href="entregable_3.html" aria-expanded="false">ENTREGABLE 3</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 4</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 5</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 6</a>
@@ -100,6 +100,20 @@
         </nav>
     </section>
 
+    <!-- NAVEGACIÓN  -->
+    <section class="header6 cid-saFlgp5VX3" id="header6-5h">
+        <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(255, 255, 255);"></div>
+    
+        <div class="align-center container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-10">
+                    <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong><em>ACTAS</em></strong></h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ACTA SEMANA N°2  -->
     <section class="features18 cid-saIG9lVT5j" id="features19-5t">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);">
         </div>
@@ -107,21 +121,19 @@
             <div class="row justify-content-center">
                 <div class="card col-12 col-lg">
                     <div class="card-wrapper">
-                        <h6 class="card-title mbr-fonts-style mb-4 display-2">
-                            <strong><em>ACTAS DE REUNIONES</em></strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><strong>ACTA DE REUNIÓN Nº 1</strong></p>
+                        <p class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>ACTA SEMANA N°2</strong></p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
-                        <a href="assets/files/Acta Semanal N°1.pdf" target="_blank"><img src="assets/images/acta_semanal_1.PNG"></a>
+                        <a href="assets/files/ACTA SEMANA N°2.pdf" target="_blank"><img src="assets/images/ACTAS/acta_semana2_imagen.PNG"></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
  
-    <!-- ACTA N°2
+     <!-- ACTA SEMANA N°3  -->
     <section class="features18 cid-sbRHbSxW2L" id="features19-7e">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);">
         </div>
@@ -129,19 +141,19 @@
             <div class="row justify-content-center">
                 <div class="card col-12 col-lg">
                     <div class="card-wrapper">
-                        <p class="mbr-text mbr-fonts-style display-7"><strong>ACTA DE REUNIÓN Nº 2</strong></p>
+                        <p class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>ACTA SEMANA Nº3</strong></p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
-                        <a href="" target="_blank"><img src=""></a>
+                        <a href="assets/files/ACTA SEMANA N°3.pdf" target="_blank"><img src="assets/images/ACTAS/acta_semana3_imagen.PNG"></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-        ACTA N°3
+    <!-- ACTA N°3
     <section class="features18 cid-sbRHnXudgh" id="features19-7f">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);">
         </div>
