--- a/esquemas.html
+++ b/esquemas.html
@@ -56,7 +56,7 @@
                         </li>
                         <!-- EQUIPO  -->
                         <li class="nav-item">
-                            <a class="text-black dropdown-item text-primary display-4" href="equipo.html" aria-expanded="false">EQUIPO</a>
+                            <a class="text-black dropdown-item text-primary display-4" href="entregable_1.html" aria-expanded="false">EQUIPO</a>
                         </li>
                         <!-- CASO CLÍNICO  -->
                         <li class="nav-item">
@@ -69,9 +69,9 @@
                                 <div class="dropdown">
                                     <a class="text-black dropdown-item text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">ENTREGABLES</a>
                                     <div class="dropdown-menu dropdown-submenu">
-                                        <a class="text-black dropdown-item text-primary display-4" href="equipo.html" aria-expanded="false">ENTREGABLE 1</a>
+                                        <a class="text-black dropdown-item text-primary display-4" href="entregable_1.html" aria-expanded="false">ENTREGABLE 1</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="entregable_2.html" aria-expanded="false">ENTREGABLE 2</a>
-                                        <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 3</a>
+                                        <a class="text-black dropdown-item text-primary display-4" href="entregable_3.html" aria-expanded="false">ENTREGABLE 3</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 4</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 5</a>
                                         <a class="text-black dropdown-item text-primary display-4" href="" aria-expanded="false">ENTREGABLE 6</a>
@@ -100,25 +100,6 @@
         </nav>
     </section>
 
-    <!-- ESQUEMAS Y DEFINICIÓN DEL PROBLEMA  -->
-    <section class="social1 cid-saDh8bZ8rW" id="share1-4g">
-        <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);">
-        </div>
-        <div class="container">
-            <div class="media-container-row">
-                <div class="col-12">
-                    <h3 class="mbr-section-title mb-3 align-center mbr-fonts-style display-1">
-                        <strong><em>ESQUEMAS Y DEFINICIÓN DEL PROBLEMA</em></strong>
-                    </h3>
-                    <div>
-                        <div class="mbr-social-likes align-center"> 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- PATIENT JOURNAY MAP -->
     <section class="header9 cid-sb0IuvTKPl" id="header9-67">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
@@ -138,36 +119,35 @@
             <div class="text-center container">
                 <div class="row justify-content-center">
                     <div class="col-md-12 col-lg-9">
-                        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;"><em>EMPHATY MAP</em></strong><strong><br></strong></h1>
-                        <img src="assets/images/EMPATHY MAP.PNG">
+                        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;"><em>EMPATHY MAP</em></strong><strong><br></strong></h1>
+                        <img src="assets/images/EMPATHY MAP.jpg">
                     </div>
                 </div>
             </div>
         </section>
 
-            <!-- ICHIKAWA MAP -->
+            <!-- FISHBONE DIAGRAM -->
     <section class="header9 cid-sb0IuvTKPl" id="header9-67">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="text-center container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-9">
-                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;"><em>ICHIKAWA MAP</em></strong><strong><br></strong></h1>
-                    <img src="assets/images/ICHIKAWA MAP.PNG">
+                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;"><em>FISHBONE DIAGRAM</em></strong><strong><br></strong></h1>
+                    <img src="assets/images/FISHBONE DIAGRAM.jpg">
                 </div>
             </div>
         </div>
     </section>
-      
-      <!-- PROBLEMA -->
-    <section class="header9 cid-sb0IuvTKPl" id="header9-67">
-        <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
-        <div class="text-center container">
+
+    <!-- DESPLAZAMIENTO ENTRE ENTREGABLES  -->
+    <section class="content12 cid-saFtHOiW5m" id="content12-5i">
+        <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-12 col-lg-9">
-                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;"><em>DEFINICIÓN DEL PROBLEMA</em></strong><strong><br></strong></h1>
-                    <p class="mbr-text mbr-fonts-style display-4">
-                        En consideración de la situación actual y en un periodo no mayor a 5 años, tanto a nivel global como nacional,  asimismo como a partir del  análisis de los esquemas propuestos, y evaluación del impacto de la ictericia neonatal a nivel socio-económico, se concluyó lo siguiente: En el país existe una falta de métodos accesibles y no invasivos para la medición de los niveles de bilirrubina durante el monitoreo constante del neonato que sufre de ictericia; es decir, contamos con un problema en el diagnóstico y seguimiento de la ictericia neonatal.
-                    </p>
+                <div class="col-md-12 col-lg-10">
+                    <div class="mbr-section-btn align-center">
+                        <a class="btn btn-success-outline display-4" href="entregable_2.html">ENTREGABLE 2</a>
+                        <a class="btn btn-success-outline display-4" href="entregable_3.html">ENTREGABLE 3</a>
+                    </div>
                 </div>
             </div>
         </div>
