--- a/esquemas.html
+++ b/esquemas.html
@@ -139,6 +139,20 @@
         </div>
     </section>
 
+    <!-- DEFINICIÓN DEL PROBLEMA -->
+    <section class="header9 cid-sb0IuvTKPl" id="header9-67">
+        <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
+        <div class="text-center container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-9">
+                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;"><em>DEFINICIÓN DEL PROBLEMA</em></strong><strong><br></strong></h1>
+                    <h4 class="mbr-text mbr-fonts-style display-7"><div>En consideración de la situación actual y en un periodo no mayor a 5 años, tanto a nivel global como nacional,  asimismo como a partir del  análisis de los esquemas propuestos, y evaluación del impacto de la ictericia neonatal a nivel socio-económico, se concluyó lo siguiente:</div></h4>
+                    <h4 class="mbr-text mbr-fonts-style display-7"><div>En el país existe una falta de métodos accesibles y no invasivos para la medición de los niveles de bilirrubina durante el monitoreo constante del neonato que sufre de ictericia; es decir, contamos con un problema en el diagnóstico y seguimiento de la ictericia neonatal.</div></h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- DESPLAZAMIENTO ENTRE ENTREGABLES  -->
     <section class="content12 cid-saFtHOiW5m" id="content12-5i">
         <div class="container">
