--- a/entregable_2.html
+++ b/entregable_2.html
@@ -202,7 +202,7 @@
                 
                     <h4 class="mbr-text mbr-fonts-style display-7"><div><b>Tabla 4: Cost Benefit Parameters</b></div></h4>
                     <img src="assets/images/tabla4.PNG">
-                    <h4 class="mbr-text mbr-fonts-style display-7"><div><b>Este cuadro presenta el costo total durante ese año y también los datos a pagar por un año de vida ajustado por calidad (QALY por sus siglas en inglés) el cual se desea utilizar para medir la rentabilidad de este proceso médico. En la tabla se observa que se desea pagar 20000£ por un año en perfecto estado de salud y a la vez ganar un promedio de 25 años por cada caso que pueda ser evitado. <b>[11]</b></div></h4>
+                    <h4 class="mbr-text mbr-fonts-style display-7"><div>Este cuadro presenta el costo total durante ese año y también los datos a pagar por un año de vida ajustado por calidad (QALY por sus siglas en inglés) el cual se desea utilizar para medir la rentabilidad de este proceso médico. En la tabla se observa que se desea pagar 20000£ por un año en perfecto estado de salud y a la vez ganar un promedio de 25 años por cada caso que pueda ser evitado. <b>[11]</b></div></h4>
                     <h4 class="mbr-text mbr-fonts-style display-7"><div>Para hacer este recuento, se usó la tasa de de infantes nacidos e identificados con ictericia neonatal durante el año 2007, de los cuales, el 60% de ellos fueron identificados con ictericia en un examen visual.</div></h4>
                 </div>
             </div>
