--- a/entregable_5.html
+++ b/entregable_5.html
@@ -108,7 +108,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-10">
                     <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>ENTREGABLE 5</strong></h1>
-                    <p class="mbr-text mbr-white mbr-fonts-style display-5"><strong>DESCRIPCIÓN DE BOCETOS DE TRES PROYECTOS PRELIMINARES</strong></p>
+                    <p class="mbr-text mbr-white mbr-fonts-style display-5"><strong>DESCRIPCIÓN Y BOCETOS DE TRES PROYECTOS PRELIMINARES</strong></p>
                 </div>
             </div>
         </div>
