--- a/entregable_5.html
+++ b/entregable_5.html
@@ -163,7 +163,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
                     <div class="mbr-section-btn align-center">
-                        <a class="btn btn-success-outline display-4" href="entregable_4.html">ENTREGABLE 4</a>
+                        <a class="btn btn-success-outline display-4" href="hito_1.html">ENTREGABLE 4</a>
                         <a class="btn btn-success-outline display-4" href="">ENTREGABLE 6</a>
                     </div>
                 </div>
