--- a/entregable_3.html
+++ b/entregable_3.html
@@ -318,7 +318,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-12">
                     <div><br></div>
-                    <img src="assets/images/ESQUEMAS Y TABLAS/TABLA-DE-REQUERIMIENTOS.jpg">
+                    <img src="assets/images/ESQUEMAS Y TABLAS/TABLA-DE-REQUERIMIENTOS.PNG">
                 </div>
             </div>
         </div>
