--- a/entregable_10.html
+++ b/entregable_10.html
@@ -128,7 +128,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-9">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong style="color: #F49791;">PROTOTIPADO ELECTRÓNICO EN PROTOBOARD</strong><strong><br></strong></h1>
-                    <video width="840" height="472.5" href="https://www.youtube.com/watch?v=eKH4k2DVbys" controls></video>
+                    <video width="840" height="472.5" src="assets/images/ESQUEMAS Y TABLAS/PROTOTIPADO EN PROTOBOARD.mp4" controls></video>
+                    <a href="https://www.youtube.com/watch?v=eKH4k2DVbys"> PROTOTIPADO EN PROTOBOARD</a>
                 </div>
             </div>
         </div>
