--- a/entregable_11.html
+++ b/entregable_11.html
@@ -206,6 +206,7 @@
                     <img src="assets/images/ESQUEMAS Y TABLAS/INTEGRACION-13.jpg">
                     <img src="assets/images/ESQUEMAS Y TABLAS/INTEGRACION-14.jpg">
                     <video width="840" height="472.5" class="MP4" src="https://www.youtube.com/watch?v=wUxsUob-_qA" controls></video>
+                      <iframe width="840" height="472.5" src="https://www.youtube.com/watch?v=wUxsUob-_qA" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
