--- a/entregable_11.html
+++ b/entregable_11.html
@@ -205,7 +205,7 @@
                     <h4 class="mbr-text mbr-fonts-style display-7">Finalmente algunas tomas del prototipo encendido y apagado y, con el cable extendido y enrollado.</h4>
                     <img src="assets/images/ESQUEMAS Y TABLAS/INTEGRACION-13.jpg">
                     <img src="assets/images/ESQUEMAS Y TABLAS/INTEGRACION-14.jpg">
-                    <video width="840" height="472.5" class="MP4" src="assets/images/ESQUEMAS Y TABLAS/INTEGRACIÓN.MP4" controls></video>
+                    <video width="840" height="472.5" class="MP4" src="assets/images/ESQUEMAS Y TABLAS/INTEGRACIÓN.mp4" controls></video>
                 </div>
             </div>
         </div>
